--- a/TheLeague/.gitignore
+++ b/TheLeague/.gitignore
@@ -9,6 +9,7 @@
 *.userosscache
 *.sln.docstates
 .vs/TheLeague/v14/.suo
+.vs/TheLeague/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
