--- a/TheLeague/.gitignore
+++ b/TheLeague/.gitignore
@@ -10,6 +10,7 @@
 *.sln.docstates
 .vs/TheLeague/v14/.suo
 .vs/TheLeague/
+TheLeague/Providers/MongoProvider.cs
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
